--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "browserslist": "defaults, not ie <= 11",
   "dependencies": {
+    "@googlemaps/google-maps-services-js": "^3.3.38",
     "@headlessui/react": "^1.7.13",
     "@mapbox/rehype-prism": "^0.8.0",
     "@mdx-js/loader": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
     "@next/mdx": "13.4.16",
+    "@react-google-maps/api": "^2.19.2",
     "@tailwindcss/typography": "^0.5.4",
     "@types/node": "20.4.7",
     "@types/react": "18.2.18",
@@ -25,6 +27,7 @@
     "clsx": "^1.2.1",
     "fast-glob": "^3.2.11",
     "feed": "^4.2.2",
+    "heroicons": "^2.0.18",
     "next": "^13.4.16",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
